# End2End_RAG

./: .env  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.py
data/: goldens.csv
faiss_index/session_20251130_144116_709e8d7c/: index.pkl  ingested_meta.json
multi_doc_chat/config/: config.yaml
multi_doc_chat/exception/: custom_exception.py
multi_doc_chat/logger/: custom_logger.py
multi_doc_chat/prompts/: prompt_library.py
multi_doc_chat/utils/: config_loader.py  model_loader.py
notebook/: RAG.ipynb  evaluations.ipynb
notebook/data/session_20251201_153317_bde36f2d/: ddd32177.txt
notebook/faiss_index/session_20251201_151238_26d3462d/: index.pkl  ingested_meta.json
notebook/faiss_index/session_20251201_152333_5de968de/: index.pkl  ingested_meta.json
notebook/faiss_index/session_20251201_152826_2c08ec2e/: index.pkl  ingested_meta.json
notebook/faiss_index/session_20251201_153317_bde36f2d/: index.pkl  ingested_meta.json
notebook/faiss_index/session_20251201_164148_8c4c4890/: index.pkl  ingested_meta.json
notebook/faiss_index/session_20251201_164653_d96eb5fd/: index.pkl  ingested_meta.json
notebook/faiss_index/session_20251201_165602_48181686/: index.pkl  ingested_meta.json
notebook/faiss_index/session_20251201_170109_e4fc329b/: index.faiss  index.pkl  ingested_meta.json
notebook/faiss_index/session_20251201_170608_ea7b8021/: index.pkl  ingested_meta.json
static/: styles.css
templates/: index.html
test/: conftest.py
test/unit/: test_data_ingestion.py
