[project]
name = "end2end-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docx2txt==0.9",
    "faiss-cpu==1.13.0",
    "fastapi==0.115.6",
    "ipykernel==6.30.1",
    "jinja2==3.1.4",
    "langchain==1.0.8",
    "langchain-community==0.4.1",
    "langchain-core==1.1.0",
    "langchain-google-genai==3.1.0",
    "langchain-huggingface==1.1.0",
    "langsmith>=0.4.49",
    "pandas>=2.3.3",
    "pypdf>=6.4.0",
    "python-dotenv==1.2.1",
    "python-multipart>=0.0.20",
    "sentence-transformers==5.1.2",
    "structlog>=25.5.0",
    "uvicorn==0.32.1",
]
